--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
+    "next": "^13.4.4",
     "postcss": "^8.4.23",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.2"
+    "react-easy-swipe": "^0.0.23",
+    "react-responsive-carousel": "^3.2.23",
+    "react-swipe": "^6.0.4",
+    "swipe-js-iso": "^2.1.5",
+    "tailwindcss": "^3.3.2",
+    "three": "^0.153.0",
+    "tw-elements": "^1.0.0-beta2"
   }
 }
