--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-three/drei": "^9.74.14",
+    "@react-three/fiber": "^8.13.3",
+    "@types/three": "^0.152.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
