--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.74.14",
     "@react-three/fiber": "^8.13.3",
+    "@tailwindcss/forms": "^0.5.4",
     "@types/three": "^0.152.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
@@ -25,12 +26,12 @@
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "tailwindcss": "^3.3.2",
     "react-easy-swipe": "^0.0.23",
+    "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
     "react-swipe": "^6.0.4",
     "swipe-js-iso": "^2.1.5",
+    "tailwindcss": "^3.3.2",
     "three": "^0.153.0",
     "tw-elements": "^1.0.0-beta2"
   }
