--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.16",
+    "html-react-parser": "^4.2.0",
     "next": "^13.4.4",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
