--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^10.1.0",
     "framer-motion": "^10.12.16",
     "html-react-parser": "^4.2.0",
     "next": "^13.4.4",
