--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.74.14",
     "@react-three/fiber": "^8.13.3",
-    "@tailwindcss/forms": "^0.5.4",
     "@types/three": "^0.152.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
@@ -35,5 +34,8 @@
     "tailwindcss": "^3.3.2",
     "three": "^0.153.0",
     "tw-elements": "^1.0.0-beta2"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4"
   }
 }
