--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-easy-swipe": "^0.0.23",
     "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-scroll-into-view": "^2.0.2",
     "react-swipe": "^6.0.4",
     "swipe-js-iso": "^2.1.5",
     "tailwindcss": "^3.3.2",
