--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "emulators": "firebase emulators:start"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -23,6 +24,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^10.4.0",
     "framer-motion": "^10.12.16",
     "html-react-parser": "^4.2.0",
     "next": "^13.4.4",
