--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scroll-into-view": "^2.0.2",
     "react-swipe": "^6.0.4",
+    "react-toastify": "^9.1.3",
     "swipe-js-iso": "^2.1.5",
     "tailwindcss": "^3.3.2",
     "three": "^0.153.0",
